# trim_isoseq_polyA

./: .gitignore  CMakeLists.txt  README.md
HMM/: CMakeLists.txt  Makefile  char_traits.hpp  fasta.hpp  fastq.hpp  format.hpp  hmm_model.hpp  hmm_utilities.h  main.cpp  matrix.hpp  polyA_hmm_model.hpp  quality.hpp  sequence.hpp  trim_isoseq_poly  type_policy.h
HMM.xcodeproj/: project.pbxproj
HMM.xcodeproj/project.xcworkspace/xcshareddata/: HMM.xcscmblueprint
HMM.xcodeproj/xcuserdata/hanb.xcuserdatad/xcschemes/: HMM.xcscheme  tests.xcscheme  xcschememanagement.plist
HMM/aux/: README.md
HMM/aux/python/: pacb_aper_filter.py  pacb_train_hmm.py
HMM/models/: lexogen_mode.txt
HMM/python/: README.md  isoseq_draft.primer_info.csv  pacb_extract_insert.py
HMM/tests/: dummy.txt  fasta_test.cpp  fastq_test.cpp  hmm_model_test.cpp  matrix_test.cpp  non_polyA_train.fa  non_polyA_train_dummy.fa  non_polyA_train_real.fa  polyA.fa  polyA.fq  polyA_HMM_test.cpp  polyA_train.fa  polyA_train_dummy.fa  polyA_train_real.fa  sequence_test.cpp
aux/: README.md
aux/C/: extractSoftclipped.c
aux/R/: trimpolyA.R
src/: CMakeLists.txt  common.cpp  common.hpp  fasta.hpp  fastq.hpp  flnc.cpp  flnc.hpp  format.hpp  hmm_model.cpp  hmm_model.hpp  hmm_utilities.h  hmm_utilities.hpp  kernel_color.h  main.cpp  matrix.hpp  polyA_hmm_model.cpp  polyA_hmm_model.hpp  sequence.hpp  thread.hpp  type_policy.h
tests/: CMakeLists.txt  files.cmake  main.cpp
tests/data/: HMM_default.txt  polyA.fq  testReader.fa
tests/src/: TestData.h  TestData.h.in  fasta_test.cpp  fastq_test.cpp  hmm_model_test.cpp  matrix_test.cpp  polyA_HMM_test.cpp  sequence_test.cpp
